<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editAccount_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/activity_horizontal_padding"
        android:paddingVertical="@dimen/activity_vertical_padding">

        <Button
            android:id="@+id/editAccount_back"
            style="@style/RoundButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_close_24dp" />

        <TextView
            android:id="@+id/editAccount_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_account_title"
            android:textAlignment="center"
            android:textAppearance="@style/EmphaticText" />

        <Button
            android:id="@+id/editAccount_save"
            style="@style/RoundButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_check_24dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/activity_horizontal_padding"
            android:paddingVertical="@dimen/activity_vertical_padding">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/editAccount_labelGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="96dp" />

            <TextView
                android:id="@+id/editAccount_usernameLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_spacing"
                android:text="@string/username_label"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/editAccount_username"
                app:layout_constraintEnd_toStartOf="@+id/editAccount_labelGuideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editAccount_username" />

            <EditText
                android:id="@+id/editAccount_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_spacing"
                android:ems="10"
                android:hint="@string/username_hint"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/editAccount_labelGuideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/editAccount_usernameLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/length_limit"
                app:layout_constraintEnd_toEndOf="@+id/editAccount_username"
                app:layout_constraintTop_toBottomOf="@+id/editAccount_username" />

            <TextView
                android:id="@+id/editAccount_emailLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_spacing"
                android:text="@string/email_label"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/editAccount_email"
                app:layout_constraintEnd_toStartOf="@+id/editAccount_labelGuideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editAccount_email" />

            <EditText
                android:id="@+id/editAccount_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_spacing"
                android:layout_marginTop="@dimen/mid_spacing"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editAccount_labelGuideline"
                app:layout_constraintTop_toBottomOf="@+id/editAccount_usernameLength" />

            <TextView
                android:id="@+id/editAccount_passwordLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_spacing"
                android:text="@string/password_label"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/editAccount_password"
                app:layout_constraintEnd_toStartOf="@+id/editAccount_labelGuideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editAccount_password" />

            <EditText
                android:id="@+id/editAccount_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_spacing"
                android:layout_marginTop="@dimen/mid_spacing"
                android:ems="10"
                android:hint="@string/new_password_hint"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editAccount_labelGuideline"
                app:layout_constraintTop_toBottomOf="@+id/editAccount_email" />

            <EditText
                android:id="@+id/editAccount_passwordConfirmation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_spacing"
                android:layout_marginTop="@dimen/small_spacing"
                android:ems="10"
                android:hint="@string/password_again_hint"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/editAccount_labelGuideline"
                app:layout_constraintTop_toBottomOf="@+id/editAccount_password" />

            <TextView
                android:id="@+id/editAccount_errorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mid_spacing"
                android:drawableStart="@drawable/ic_error_24dp"
                android:gravity="center_vertical"
                android:textAlignment="viewStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editAccount_passwordConfirmation" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>