<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/outer_margin"
        android:paddingTop="@dimen/outer_margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/inner_margin">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profile_picture"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:layout_constraintEnd_toStartOf="@id/profile_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="?attr/shapeAppearanceSmallComponent"
                app:srcCompat="@drawable/ic_launcher_background" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/profile_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.3" />

            <TextView
                android:id="@+id/profile_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/inner_margin"
                android:fontFamily="sans-serif-condensed"
                android:text="Parslie"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/profile_guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profile_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/inner_margin"
                android:text="This is a description. I'm a 21 y.o. software engineering student at Linköping University."
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/profile_guideline"
                app:layout_constraintTop_toBottomOf="@id/profile_username" />

            <Button
                android:id="@+id/profile_followBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inner_margin"
                android:text="@string/follow_label"
                app:layout_constraintEnd_toEndOf="@+id/profile_picture"
                app:layout_constraintStart_toStartOf="@+id/profile_picture"
                app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/profile_description"
                app:layout_constraintTop_toBottomOf="@id/profile_description">

                <Button
                    android:id="@+id/profile_followersBtn"
                    style="@style/Button.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/followers_label" />

                <Button
                    android:id="@+id/profile_followingsBtn"
                    style="@style/Button.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/followings_label" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/profile_progressBar"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />
    </LinearLayout>
</layout>